update bower main file

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "requestAnimationFrame",
   "version": "1.0.0",
-  "main": "./rAF.js",
+  "main": "rAF.js",
   "dependencies": {
   }
 }
